--- a/exercicios/ex003/index.html
+++ b/exercicios/ex003/index.html
@@ -11,7 +11,7 @@
         <p>Abaixo você vai ver uma imagem que está na mesma pasta.</p>
         <!--src: source ou origem do arquivo, onde o arquivo está-->
         <!--Alt: ALternative ou texto alternativo, texto que dá o nome da imagem-->
-        <img src="logo-html.png" alt="Logo HTML5">
+        <img src="IMG/logo-html.png" alt="Logo HTML5">
 
         <p>Também podemos carregar imagens que estão em sub-pastas</p>
         <img src="img/logo-css.png" alt="Logo CSS3">
