--- a/exercicios/ex008/index.html
+++ b/exercicios/ex008/index.html
@@ -5,32 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Formatação de Textos</title>
         <style>
-            mark {
-                background-color: limegreen;
+            mark{
+                background-color: aqua;
             }
         </style>
     </head>
     <body>
-        <h1>Principais formatações</h1>
+        <!--Capitulo 08 - Aula 02-->
+        <h1>Formatação de textos</h1>
             <h2>Negrito / Destaque</h2>
-                <p>Nesta frase temos um <b>termo em negrito</b> usando a tag B (não semântica).</p>
-                <p>Nesta frase, tenho um <strong>termo em destaque</strong> usando a tag STRONG (semântica).</p>
+                <p>Nessa frase temos um <b>texto em negrito</b> usando a tag b (não semântica)</p>
+                <p>Nessa frase temos um <strong>texto em negrito</strong> usando a tag STRONG (Semântica)</p>
             <h2>Itálico / Ênfase</h2>
-                <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
-                <p>Nesta frase, temos um <em>termo em ênfase</em> usando a tag EM (semântica).</p>
+                <p>Nessa frase temos um <i>termo em italico</i> usando a tag i (não semântica)</p>
+                <p>Nessa frase temos um <em>termo em ênfase</em> usando a tag EM (Semântica)</p>
+        <!--Capitulo 08 - Aula 03-->
             <h2>Texto marcado</h2>
-                <p>Podemos criar também <mark>um texto marcado</mark> usando a tag MARK.</p>
-                <p>E no outro parágrafo, temos <mark>outro texto marcado</mark> no final.</p>
-            <h2>Texto grande e pequeno</h2>
-                <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p>
-            <h2>Texto deletado</h2>
-                <p>Podemos marcar <del>um texto como excluído</del> para indicar que ele deve ser lido, mas não considerado.</p>
+                <p>Podemos criar também um <mark>texto marcado</mark> usando a tag mark</p>
+                <p>E no outro paragrafo temos outro <mark style="background-color: lime;">texto marcado</mark> no final</p>
+            <h2>Texto Grande e Pequeno</h2>
+                <p>Estamos crtiando um <big>texto grande</big> e um <small>texto pequeno</small></p>
+            <h2>Texto Deletado</h2>
+                <p>Podemos marcar um <del>texto como excluido</del> para indicar que ele deve ser lido mas não considerado </p>
             <h2>Texto inserido</h2>
-                <p>Podemos marcar <ins>um texto como inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois.</p>
-                <p>Existe também o <u>sublinhado</u> com a tag U (não semântica)</p>
+                <p>Podemos marcar um <ins>texto inserido</ins> para dar uma enfase e indicar que ele foi adicionado depois</p>
+                <p>Existe também o <u>texto sublinhado</u> com a tag U (não semantica)</p>
             <h2>Texto sobrescrito</h2>
-                <p>Para inserir coisas do tipo x<sup>20</sup>+3</p>
-            <h2>Texto subscrito</h2>
+                <p>para inserir coisas do tipo x<sup>20</sup> + 3</p>
+            <h2>Texto subescrito</h2>
                 <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
+        <!--Capitulo 08 - Aula 04-->
+            
     </body>
 </html>
